--- a/templates/index.html
+++ b/templates/index.html
@@ -183,7 +183,7 @@ function submitBox() {
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>MedSAM Overlay</title>
+  <title>MedSAM</title>
   <style>
     /* Animated gradient background */
     body {
